# cs419

./: .gitignore  CMakeLists.txt  README.md  main.cc
python/: .gitignore
python/raytracing/: __init__.py  plot_utils.py
src/: CMakeLists.txt  benchmark.cc  benchmark.h  brdf.cc  brdf.h  camera.cc  camera.h  common.cc  common.h  file_io.cc  file_io.h  geom3d.cc  geom3d.h  light.h  matrix_utils.cc  matrix_utils.h  object.cc  object.h  ray.cc  ray.h  renderer.cc  renderer.h  sampling.cc  sampling.h  scene.cc  scene.h  viewing.cc  viewing.h  world.h
tests/: CMakeLists.txt  camera_test.cc  intersection_test.cc  scene_test.cc  triangle_test.cc
